tests/parser/tests/cases/should_fail/goodbye_world/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:8
1 |   print("goodbye world...
  |          ^^^^^^^^^^^^^^^^^ here
  = note: Unclosed string literal 
